--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -560,7 +560,7 @@ d %>%
 
 <br>
 
-### Interaction effects
+### Interaction effects {#interaction-effects}
 
 <br>
 
@@ -655,7 +655,7 @@ We fit random forest, xgboost, and multiple linear regression models to a traini
 
 We first fit a random forest to the Tier 1 labeled data because the algorithm has less strict assumptions compared to regression, it can handle correlated predictors, and because the variable importance output quickly indicates which variables explain the most variance in the dataset. This can confirm our understanding of the relationships in the data explored in the EDA above and inform how to specify subsequent, more interpretable linear models.
 
-We fit the rand forest regression to predict radius from service connections, population, owner type, service area type code, and wholesaler status. Service connections, population served, and owner type code appear important in segmenting the feature space, and service area type code and wholesaler status appear less predictive.  
+We fit the rand forest regression to predict radius from service connections, population, owner type, service area type code, and wholesaler status. Service connections, population served, and owner type code appear important in segmenting the feature space, and service area type code and wholesaler status appear less predictive.
 
 ```{r rf vip}
 library(tidymodels)
@@ -706,7 +706,7 @@ rf_fit %>%
   theme_report
 ```
 
-Next we fit the model on the test set, plot residuals and calculate an $R^2$ goodness of fit metric and two standard metrics of error, the RMSE and MAE. For our purposes, the MAE is likely more important because it doesn't penalize outliers as much as RMSE, and we care more about the overall appropriateness of the boundary than we do about preventing large outlying errors. 
+Next we fit the model on the test set, plot residuals and calculate an $R^2$ goodness of fit metric and two standard metrics of error, the RMSE and MAE. For our purposes, the MAE is likely more important because it doesn't penalize outliers as much as RMSE, and we care more about the overall appropriateness of the boundary than we do about preventing large outlying errors.
 
 ```{r rf fit test residuals and error}
 # predict on test set
@@ -733,12 +733,11 @@ rf_metrics(rf_test_res, truth = log10(radius), estimate = log10(.pred)) %>%
   kableExtra::kable_styling(full_width = FALSE)
 ```
 
-
 <br>
 
 ### xgboost
 
-Like random forest, xgboost is a tree-based method that is relatively easy to fit, and unconstrained by linear model assumptions. Variable importance metrics were consistent with those examined in the random forest model. We tuned xgboost hyperparamaters across a grid of inputs (see plot below, used to select the best xgboost model) and actually found that -- on the holdout test set -- it performed worse than the random forest in terms of goodness of fit and error. At first surprising, this result makes sense given the nature of the more flexible xgboost model, the lack of adequate data that a more flexible model like xgboost would benefit from, and the underlying functional form of the relationship we aim to model. 
+Like random forest, xgboost is a tree-based method that is relatively easy to fit, and unconstrained by linear model assumptions. Variable importance metrics were consistent with those examined in the random forest model. We tuned xgboost hyperparamaters across a grid of inputs (see plot below, used to select the best xgboost model) and actually found that -- on the holdout test set -- it performed worse than the random forest in terms of goodness of fit and error. At first surprising, this result makes sense given the nature of the more flexible xgboost model, the lack of adequate data that a more flexible model like xgboost would benefit from, and the underlying functional form of the relationship we aim to model.
 
 ```{r xgboost hyperparameter}
 # load hyperparameter tune space
@@ -760,7 +759,7 @@ xgb_res %>%
   theme_report
 ```
 
-xgboost is a flexble machine learning model: it tends to outperform random forest when there is sufficient data to segment the feature space and learn from residuals. However, in our example, we lack substantial data with only a few tens of thousands of water systems, and only 3 high importance predictors, 2 of which are highly correlated. Thus, the similar performance of xgboost and random forest may be explained by not being able to improve on random forest, and slightly overfitting to the training set, which a less flexible model like linear regression will not suffer from. In statistical terms, low flexibility models also tend to maintain low variance, meaning they perform similarly across new test sets (i.e., less bias). Finally, because the underlying functional form of the relationship being modeled is strongly linear (see the section on [Interaction Effects](#interaction-effects)), there is not a great advantage in straying from linear methods. 
+xgboost is a flexble machine learning model: it tends to outperform random forest when there is sufficient data to segment the feature space and learn from residuals. However, in our example, we lack substantial data with only a few tens of thousands of water systems, and only 3 high importance predictors, 2 of which are highly correlated. Thus, the similar performance of xgboost and random forest may be explained by not being able to improve on random forest, and slightly overfitting to the training set, which a less flexible model like linear regression will not suffer from. In statistical terms, low flexibility models also tend to maintain low variance, meaning they perform similarly across new test sets (i.e., less bias). Finally, because the underlying functional form of the relationship being modeled is strongly linear (see the section on [Interaction Effects](#interaction-effects)), there is not a great advantage in straying from linear methods.
 
 ```{r xgboost vip and residuals and performance}
 # load the best fit model
@@ -802,15 +801,16 @@ xgb_metrics(xgb_test_res, truth = log10(radius), estimate = log10(.pred)) %>%
 
 ### Linear Regression
 
-As explained in the review of random forest and xgboost models above, there is sound rationale for linear regression in the context of this problem. A strong (and intuitive) linear relationship is observed between Tier 1 water system radii and service connections. The linear model fit outperforms other models, is easily interpretable, and provides standard error metrics. The underlying data do not have a high number of observations that machine learning models would benefit from, and the parameter space is also not high in dimensionality. For these reasons, we select the linear model to estimate Tier 3 boundaries. 
+As explained in the review of random forest and xgboost models above, there is sound rationale for linear regression in the context of this problem. A strong (and intuitive) linear relationship is observed between Tier 1 water system radii and service connections. The linear model fit outperforms other models, is easily interpretable, and provides standard error metrics. The underlying data do not have a high number of observations that machine learning models would benefit from, and the parameter space is also not high in dimensionality. For these reasons, we select the linear model to estimate Tier 3 boundaries.
 
-Unlike the random forest and xgboost models, we are careful to log transform log-normal predictors and response, and specify interaction terms where present. 
+Unlike the random forest and xgboost models, we are careful to log transform log-normal predictors and response, and specify interaction terms where present. We experimented with different model specifications, including a model which combined the correlated population and service connection variables, however, this led to negligible improvement in the model fit and less interpretable model coefficients -- thus in the final model specification we regress only on service connection. Interaction terms are added for owner type, service area type code, and wholesaler status. A simple linear regression on service connections alone has an $R^2$ of 0.56; including these extra terms substantially improves the model fit and reduces test error.
 
 ```{r lm fit}
 # re-read dataset and log transform the response - only for linear model
 d <- read_csv(path(staging_path, "matched_output_clean.csv")) %>% 
   mutate(radius  = log10(radius),
-         # multiply correlated predictors
+         # multiply correlated predictors - however, this has negligible 
+         # impact on model fit and makes it harder to interpret, so ignore
          density = population_served_count * service_connections_count)
 
 # unlabeled data (du) and labeled data (dl)
@@ -831,8 +831,8 @@ lm_recipe <-
   recipe(
     radius ~ 
       service_connections_count + 
-      owner_type_code + 
-      satc + 
+      owner_type_code +
+      satc +
       is_wholesaler_ind,
     data = train
   ) %>% 
@@ -842,8 +842,8 @@ lm_recipe <-
   step_dummy(all_nominal_predictors()) %>% 
   # specify interaction effects
   step_interact(~service_connections_count:starts_with("owner_type_code")) %>%
-  step_interact(~service_connections_count:starts_with("satc")) %>% 
-  step_interact(~service_connections_count:starts_with("is_wholesaler_ind")) 
+  step_interact(~service_connections_count:starts_with("satc")) %>%
+  step_interact(~service_connections_count:starts_with("is_wholesaler_ind"))
 
 # specify model and engine for linear model and rf
 lm_mod <- linear_reg() %>% set_engine("lm")
@@ -874,7 +874,7 @@ lm_test_res %>%
   theme_report
 ```
 
-On the test set, linear model goodness of fit is comparable to random forest, but error metrics are notably lower. 
+On the test set, linear model goodness of fit is comparable to random forest, but error metrics are notably lower.
 
 ```{r lm goodness of fit and error}
 # calculate goodness of it and error metrics
@@ -915,7 +915,7 @@ t3 %>%
 
 #### Confidence intervals
 
-Linear model 5 and 95% confidence intervals are calculated and provided as an output. Importantly, the range of these predictions is relatively narrow, and generally less than 1 km. 
+Linear model 5 and 95% confidence intervals are calculated and provided as an output. Importantly, the range of these predictions is relatively narrow, and generally less than 1 km.
 
 ```{r lm ci range distribution}
 d %>% 
@@ -935,7 +935,7 @@ d %>%
   theme_report
 ```
 
-Below is an example of one Tier 3 with a typical CI range (around 1 km). Toggle to the `Esri.WorldImagery` basemap to view satellite imagery of the underlying location and compare this to the estimated range of the Tier 3 estimates. 
+Below is an example of one Tier 3 with a typical CI range (around 1 km). Toggle to the `Esri.WorldImagery` basemap to view satellite imagery of the underlying location and compare this to the estimated range of the Tier 3 estimates.
 
 ```{r}
 # lm CI layers
@@ -958,10 +958,35 @@ mapview(filter(t3m_med, pwsid == pwsid_select),
 
 <br>
 
+#### Model Coefficients
+
+```{r lm coefficients, include = FALSE}
+b <- lm_fit %>% 
+  extract_fit_engine() %>% 
+  tidy()
+```
+
+In the linear model specified above, when both the dependent (response) variable and independent (predictor) variables are log-transformed we interpret these coefficients as the percent increase in the predictor for every 1% increase in the response. In our linear model, only the service connections are log transformed, thus we interpret the `service_connections_count` coefficient (`r round(filter(b, term == "service_connections_count")$estimate, 2)`) as follows: for every a 1% increase in the water system radius, we see a `r round(filter(b, term == "service_connections_count")$estimate, 2)`% increase in service connection count. Thus, a 25%, 50%, and 75% increase in the radius are associated with a `r ceiling((1.25^(filter(b, term == "service_connections_count")$estimate)-1)*100)`%, `r ceiling((1.50^(filter(b, term == "service_connections_count")$estimate)-1)*100)`%, and `r ceiling((1.75^(filter(b, term == "service_connections_count")$estimate)-1)*100)`%\` increase in service connection count, respectively.
+
+It is also worth noting the high prevalence of high p-value coefficients, which suggests that there is little evidence to support an effect from the coefficient[^8]. Most interaction term coefficients fall into this category. By contrast, low p-value coefficients indicate predictors that, when changed, also changes the response variable.
+
+[^8]: The p-value in a linear regression tests the null hypothesis that the coefficient has no effect (\$\\beta\$ = zero). A low p-value indicates evidence for rejecting the null hypothesis and a high p-value indicates otherwise.
+
+    \
+
+```{r lm coefficients table}
+lm_fit %>% 
+  extract_fit_engine() %>% 
+  tidy() %>% 
+  knitr::kable() %>% 
+  kableExtra::kable_styling(full_width = FALSE)  
+```
+
+<br>
+
 # Limitations {#limitations}
 
 No model is without limitations. In this section, we highlight key limitations and identify potential future pathways to improve the model fit through additional data collection and/or cleaning.
-
 
 <br>
 
@@ -983,7 +1008,7 @@ big_pancake_pwsid <- pancakes %>%
   pull(pwsid)
 ```
 
-The "pancake problem" is fundamentally caused by low centroid accuracy  (e.g., country or state centroid accuracy), and impacts PWSIDs that lack an explicit boundary (or TIGRIS match). Estimated radii for these systems result in circular buffers that overlap, like a stack of pancakes. To illustrate, we query for the biggest pancake problem (greatest number of pancakes in a single stack), which belongs to the county of `r big_pancakes$county_served[1]` in `r big_pancakes$state_code[1]` and has `r length(big_pancake_pwsid)` Tier 3 predictions. 
+The "pancake problem" is fundamentally caused by low centroid accuracy (e.g., country or state centroid accuracy), and impacts PWSIDs that lack an explicit boundary (or TIGRIS match). Estimated radii for these systems result in circular buffers that overlap, like a stack of pancakes. To illustrate, we query for the biggest pancake problem (greatest number of pancakes in a single stack), which belongs to the county of `r big_pancakes$county_served[1]` in `r big_pancakes$state_code[1]` and has `r length(big_pancake_pwsid)` Tier 3 predictions.
 
 ```{r pancake problem map}
 # visualize
@@ -993,7 +1018,6 @@ temm %>%
 ```
 
 Upstream centroid accuracy issues are beyond the scope of this study, and may be addressed in coordination with federal agencies that produce FRS and ECHO databases. A recommendation for how to address the pancake problem is outlined in the [Recommendations](#recommendations) section below.
-
 
 <br>
 
@@ -1010,29 +1034,26 @@ d %>%
   kableExtra::kable_styling(full_width = FALSE)
 ```
 
+<br>
 
-<br> 
+# Recommendations {#recommendations}
 
-# Recommendations
+Beyond a discussion of how the TAMM spatial layer may be used (covered in the next section, [Contributions](#contributions)) we advise the following improvements to the pipeline for creating the TEMM spatial layer. In order of importance:
 
-Beyond a discussion of how the TAMM spatial layer may be used (covered in the next section, [Contributions](#contributions)) we advise the following improvements to the pipeline for creating the TEMM spatial layer. In order of importance: 
-
-1. **Collect additional Tier 1 data.** Explicit boundary data supersedes Tier 2 TIGER proxy matches and Tier 3 modeled water system boundaries. Moreover, additional Tier 1 data improves Tier 3 model predictions by providing more training data for similar systems with missing boundary data or a matching TIGER place. In theory, explicit boundary data for each state across the USA would supersede all Tier 2 and 3 matches and estimates and reduce the pipeline presented herein to a simple data cleaning and assimilation task.  
-2. **Address the "Pancake Problem".** Low-accuracy centroids challenge the usefulness of the TEMM layer and introduce uncertainty into analyses that depend on these data. We propose an approach to re-center low-accuracy centroids: 
-    - To "spatially dis-aggregate" or "spread out" the pancakes to more reasonable locations, one approach is to relocate low accuracy centroids (i.e., state and county level centroid accuracy) to the centroids of [cities and towns](https://hifld-geoplatform.opendata.arcgis.com/datasets/cities-and-towns-ntad/explore?location=44.247405%2C-113.640330%2C3.84&showTable=true){target="_blank"} that fall within the county/state (depending on the centroid accuracy). Candidate cities for pancakes may be identified via a name match.  
-3. **Gather labeled boundaries for tribal systems** (and territories if coverage is to be extended to these regions). The lack of data in tribal areas means that these areas are likely to be underrepresented. Coordination should target the collection of Tier 1 data for these systems. 
-
+1.  **Collect additional Tier 1 data.** Explicit boundary data supersedes Tier 2 TIGER proxy matches and Tier 3 modeled water system boundaries. Moreover, additional Tier 1 data improves Tier 3 model predictions by providing more training data for similar systems with missing boundary data or a matching TIGER place. In theory, explicit boundary data for each state across the USA would supersede all Tier 2 and 3 matches and estimates and reduce the pipeline presented herein to a simple data cleaning and assimilation task.\
+2.  **Address the "Pancake Problem".** Low-accuracy centroids challenge the usefulness of the TEMM layer and introduce uncertainty into analyses that depend on these data. We propose an approach to re-center low-accuracy centroids:
+    -   To "spatially dis-aggregate" or "spread out" the pancakes to more reasonable locations, one approach is to relocate low accuracy centroids (i.e., state and county level centroid accuracy) to the centroids of [cities and towns](https://hifld-geoplatform.opendata.arcgis.com/datasets/cities-and-towns-ntad/explore?location=44.247405%2C-113.640330%2C3.84&showTable=true){target="_blank"} that fall within the county/state (depending on the centroid accuracy). Candidate cities for pancakes may be identified via a name match.\
+3.  **Gather labeled boundaries for tribal systems** (and territories if coverage is to be extended to these regions). The lack of data in tribal areas means that these areas are likely to be underrepresented. Coordination should target the collection of Tier 1 data for these systems.
 
 <br>
 
-# Contributions
+# Contributions {#contributions}
 
-We developed a "Tiered Explicit, Match, and Model" (**TEMM**) approach for nationwide water system boundary estimation and an open source data pipeline to dynamically regenerate the TEMM spatial layer based on the addition of new Tier 1 explicit boundaries, refinement of the Tier 2 matching algorithm, improvements to the Tier 3 modeled boundaries, and changes to any other data dependencies (e.g., improved centroid location to solve the pancake problem). The spatial layer covers `r format_bign(nrow(d))` community water systems and a total population of `r format_bign(pop_total)`. Most (`r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million people (`r sum(pop$prop[1:2])`% of the population) are covered by a Tier 1 or 2 spatial boundary, which we demonstrate to have relatively high accuracy. 
+We developed a "Tiered Explicit, Match, and Model" (**TEMM**) approach for nationwide water system boundary estimation and an open source data pipeline to dynamically regenerate the TEMM spatial layer based on the addition of new Tier 1 explicit boundaries, refinement of the Tier 2 matching algorithm, improvements to the Tier 3 modeled boundaries, and changes to any other data dependencies (e.g., improved centroid location to solve the pancake problem). The spatial layer covers `r format_bign(nrow(d))` community water systems and a total population of `r format_bign(pop_total)`. Most (`r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million people (`r sum(pop$prop[1:2])`% of the population) are covered by a Tier 1 or 2 spatial boundary, which we demonstrate to have relatively high accuracy.
 
-Results may be used for xyz. 
+Results may be used for xyz.
 
-Contributor guidelines xyz. 
-
+Contributor guidelines xyz.
 
 <br>
 
